# BioExplorer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGMENTS.txt  ARCHITECTURE.md  AUTHORS.txt  BioExplorer.cpp  BioExplorer.h  CMakeLists.txt  CONTRIBUTING.md  Covid19Plugin.cpp  Covid19Plugin.h  DOCKER.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  index.html
bioexplorer/backend/: CMakeLists.txt
bioexplorer/backend/doc/: build_doxygen.sh  doxygen.cfg  metadata.md  requirements.txt
bioexplorer/backend/plugin/: BioExplorerPlugin.cpp  BioExplorerPlugin.h
bioexplorer/backend/science/: BioExplorerPlugin.cpp  BioExplorerPlugin.h
bioexplorer/backend/tests/: CMakeLists.txt  Glycans.cpp  MeshBasedMembrane.cpp  Protein.cpp  RNASequence.cpp
bioexplorer/core/: CMakeLists.txt  Dockerfile
bioexplorer/core/CMake/: FindPQXX.cmake
bioexplorer/core/doc/: build_sphinx.sh  doxygen.cfg  extra.css  metadata.md
bioexplorer/core/plugin/: BioExplorerPlugin.cpp  BioExplorerPlugin.h
bioexplorer/core/tests/: CMakeLists.txt  Glycans.cpp  MeshBasedMembrane.cpp  Protein.cpp  RNASequence.cpp  Utils.cpp
bioexplorer/pythonsdk/: DOCKER.md  Dockerfile  Makefile  README.md  pylintrc  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
bioexplorer/pythonsdk/bioexplorer/: __init__.py  animation_parameters.py  bio_explorer.py  displacement_parameters.py  enums.py  math_utils.py  metabolism.py  molecular_systems.py  movie_maker.py  movie_scenario.py  notebook_widgets.py  report_parameters.py  sonata_explorer.py  transfer_function.py  version.py
bioexplorer/pythonsdk/doc/: Makefile
bioexplorer/pythonsdk/notebooks/: BioExplorer_ACE2_Receptor.ipynb  BioExplorer_E_protein.ipynb  BioExplorer_M_protein.ipynb  BioExplorer_animation_simplest_cell.ipynb  BioExplorer_animation_virus.ipynb  BioExplorer_coronavirus.ipynb  BioExplorer_coronavirus_membrane_fusion.ipynb  BioExplorer_fields.ipynb  BioExplorer_full_scene.ipynb  BioExplorer_high_glucose_movie.ipynb  BioExplorer_high_glucose_scenario.ipynb  BioExplorer_high_glucose_stills.ipynb  BioExplorer_infection.ipynb  BioExplorer_low_glucose_movie.ipynb  BioExplorer_low_glucose_scenario.ipynb  BioExplorer_low_glucose_stills.ipynb  BioExplorer_mesh.ipynb  BioExplorer_mesh_based_membrane.ipynb  BioExplorer_ooc_brick_builder.ipynb  BioExplorer_ooc_viewer.ipynb  BioExplorer_protein_dimensions.ipynb  BioExplorer_rna_sequence.ipynb  BioExplorer_simplest_cell.ipynb  BioExplorer_simplest_example.ipynb  BioExplorer_spike.ipynb  BioExplorer_spike_and_ACE2_receptor.ipynb  BioExplorer_spike_south_african_variant.ipynb  BioExplorer_surfactant_A.ipynb  BioExplorer_surfactant_D.ipynb  BioExplorer_virus_binding.ipynb  BioExplorer_widgets.ipynb
bioexplorer/pythonsdk/scripts/: animated_glucose_metabolism_scenario.py  animated_high_glucose_scenario.py  animated_low_glucose_scenario.py  animated_neuromodulation_scenario.py  missing_frames.py
bioexplorer/pythonsdk/tests/: test_cell.py  test_fields.py  test_glucose.py  test_high_glucose.py  test_immune.py  test_layout.py  test_low_glucose.py  test_medias.py  test_mesh.py  test_mesh_based_membrane.py  test_point_fields.py  test_protein.py  test_protein_e.py  test_protein_m.py  test_simple_coronavirus.py  test_surfactant.py  test_vector2.py  test_vector3.py  test_vector_fields.py  test_virus.py  test_widgets.py
core/apps/service/: CMakeLists.txt  main.cpp
core/brayns/tasks/: AddModelFromBlobTask.cpp  AddModelFromBlobTask.h  AddModelTask.cpp  AddModelTask.h  CMakeLists.txt  LoadModelFunctor.cpp  LoadModelFunctor.h  errors.h
core/engines/optix6/: CMakeLists.txt  Logs.h  OptiXCamera.cpp  OptiXCamera.h  OptiXCameraProgram.h  OptiXCommonStructs.h  OptiXContext.cpp  OptiXContext.h  OptiXEngine.cpp  OptiXEngine.h  OptiXFrameBuffer.cpp  OptiXFrameBuffer.h  OptiXMaterial.cpp  OptiXMaterial.h  OptiXModel.cpp  OptiXModel.h  OptiXOrthographicCamera.cpp  OptiXPerspectiveCamera.cpp  OptiXRenderer.cpp  OptiXRenderer.h  OptiXScene.cpp  OptiXScene.h  OptiXTypes.h  OptiXUtils.h  OptiXVolume.cpp  OptiXVolume.h
core/engines/optix7_experimental/: CMakeLists.txt  OptiXCamera.h  OptiXContext.cpp  OptiXContext.h  OptiXEngine.cpp  OptiXMaterial.h  (+8 more)
core/plugins/: CMakeLists.txt
engines/optix/: CMakeLists.txt  CommonStructs.h  Logs.h  OptiXCamera.cpp  OptiXContext.cpp  OptiXContext.h  OptiXEngine.cpp  OptiXFrameBuffer.cpp  OptiXFrameBuffer.h  OptiXMaterial.cpp  OptiXModel.cpp  OptiXModel.h  OptiXOpenDeckCamera.cpp  OptiXPerspectiveCamera.h  OptiXRenderer.cpp  OptiXScene.cpp  OptiXScene.h  OptiXTypes.h  OptiXUtils.h
extras/MediaMaker/: CMakeLists.txt  DOCKER.md  Dockerfile  README.md  log.h
extras/Metabolism/: CMakeLists.txt
extras/Sonata/: CMakeLists.txt
platform/: CMakeLists.txt  platform-config.cmake
platform/core/: Brayns.cpp  Brayns.h  CMakeLists.txt  Core.cpp  Core.h  EngineFactory.cpp  EngineFactory.h  PluginManager.cpp  PluginManager.h
platform/plugins/: CMakeLists.txt
platform/tests/: CMakeLists.txt  ClientServer.h  PDiffHelpers.h  addModel.cpp  addModelFromBlob.cpp  background.cpp  brayns.cpp  clipPlaneRendering.cpp  clipPlanes.cpp  demoOptiX.cpp  json.cpp  lights.cpp  model.cpp  myPlugin.cpp  plugin.cpp  propertyMap.cpp  renderer.cpp  sdfBeziers.cpp  sdfGeometries.cpp  shadows.cpp  snapshot.cpp  streamlines.cpp  subsampling.cpp  testImages.cpp  throttle.cpp  transferFunction.cpp  webAPI.cpp
plugins/: CMakeLists.txt
plugins/Deflect/: DeflectParameters.cpp  DeflectParameters.h  DeflectPixelOp.cpp  DeflectPlugin.cpp  DeflectPlugin.h  utils.h
plugins/EEG/: CMakeLists.txt
plugins/MEG/: CMakeLists.txt
plugins/Multiview/: MultiviewPlugin.cpp  MultiviewPlugin.h
plugins/OpenDeck/: CMakeLists.txt  OpenDeckParameters.cpp  OpenDeckParameters.h  OpenDeckPlugin.cpp  OpenDeckPlugin.h
plugins/Rockets/: BinaryRequests.h  ImageGenerator.cpp  RocketsPlugin.cpp  RocketsPlugin.h  SnapshotTask.h  Throttle.cpp  Throttle.h  Timeout.h  jsonPropertyMap.h  jsonSerialization.h  jsonUtils.h
plugins/VRPN/: CMakeLists.txt  VRPNPlugin.cpp  VRPNPlugin.h
spaceexplorer/blackhole/: CMakeLists.txt
(+13737 files in other folders)
